[package]
name = "linux-usb-functionfs-sys"
version = "0.1.0"
authors = ["Sid Spry <github@sid.aeam.us>"]
license = "AGPL-3.0"
homepage = "https://github.com/R030t1/linux-usb-functionsfs-sys"
keywords = ["usb", "embedded", "linux"]
categories = ["api-bindings", "embedded", "hardware-support", "os::unix-apis"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.54.1"

[dependencies]

